alt tags on div's with img role. Fixed horizontal overflow.

--- a/docs/index.css
+++ b/docs/index.css
@@ -115,6 +115,11 @@ body {
 /* General styling */
 /* #region */
 
+body {
+  /* For decorative bottom element */
+  overflow-x: hidden;
+}
+
 /* Header */
 .header {
   display: flex;
